k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-api

  template:
    metadata:
      labels:
        app: docker-api 

    spec:
      containers:
      - name: docker-api
        image: ghcr.io/imroatulfaizah/docker-api:77c963f

        ports:
        - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /hello
            port: 8080
          
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /hello
            port: 8080

          initialDelaySeconds: 15
          periodSeconds: 20

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          
          limits:
            cpu: "500m"
            memory: "512Mi"
