k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-api

spec:
  selector:
    app: docker-api

  ports:
  - port: 80
    targetPort: 8080

  type: ClusterIP
