k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-api-ingress
  namespace: docker-api

spec:
  ingressClassName: nginx

  rules:
    - host: docker-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-api
                port:
                  number: 80
